# ros2_ws

./: README.md
install/: local_setup.sh  setup.sh
install/robot_ras_decision/include/robot_ras_decision/robot_ras_decision/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp
install/robot_ras_decision/include/robot_ras_decision/robot_ras_decision/msg/detail/: movement__builder.hpp  movement__rosidl_typesupport_fastrtps_c.h  movement__rosidl_typesupport_fastrtps_cpp.hpp  movement__rosidl_typesupport_introspection_cpp.hpp  movement__type_support.c  movement__type_support.hpp
install/robot_ras_decision/include/robot_ras_decision/robot_ras_decision/srv/: set_velocity.hpp
install/robot_ras_decision/include/robot_ras_decision/robot_ras_decision/srv/detail/: set_velocity__functions.c  set_velocity__rosidl_typesupport_introspection_c.h  set_velocity__struct.h  set_velocity__struct.hpp  set_velocity__type_support.c  set_velocity__type_support.h  set_velocity__type_support.hpp
install/robot_ras_decision/lib/robot_ras_decision/: Manager  MovementControl
install/robot_ras_decision/local/lib/python3.10/dist-packages/robot_ras_decision/: _robot_ras_decision_s.ep.rosidl_typesupport_c.c  _robot_ras_decision_s.ep.rosidl_typesupport_fastrtps_c.c
install/robot_ras_decision/local/lib/python3.10/dist-packages/robot_ras_decision-0.0.1-py3.10.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
install/robot_ras_decision/local/lib/python3.10/dist-packages/robot_ras_decision/msg/: _movement.py  _movement_s.c
install/robot_ras_decision/share/robot_ras_decision/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_ras_decision/share/robot_ras_decision/cmake/: export_robot_ras_decision__rosidl_generator_cExport.cmake  export_robot_ras_decision__rosidl_generator_cppExport.cmake  export_robot_ras_decision__rosidl_generator_pyExport.cmake  export_robot_ras_decision__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_robot_ras_decision__rosidl_typesupport_fastrtps_cExport.cmake  robot_ras_decisionConfig.cmake  robot_ras_decision__rosidl_typesupport_cExport.cmake  robot_ras_decision__rosidl_typesupport_introspection_cExport-noconfig.cmake  robot_ras_decision__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/robot_ras_decision/share/robot_ras_decision/msg/: Movement.idl
install/robot_ras_decision/share/robot_ras_decision/srv/: SetVelocity.idl
install/robot_ras_ros/share/robot_ras_ros/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_ras_ros/share/robot_ras_ros/cmake/: robot_ras_rosConfig.cmake
install/robot_ras_ros/share/robot_ras_ros/launch/: gazebo.launch.py  spawn.launch.py
install/robot_ras_ros/share/robot_ras_ros/models/hacka_labirinth/: model.config  model.sdf
install/robot_ras_ros/share/robot_ras_ros/models/hacka_wall/: model.config  model.sdf
install/robot_ras_ros/share/robot_ras_ros/models/labirinth/: model.config  model.sdf
install/robot_ras_ros/share/robot_ras_ros/models/walls/: model.sdf
install/robot_ras_ros/share/robot_ras_ros/params/: ros2_control.yaml
install/robot_ras_ros/share/robot_ras_ros/rviz/: default.rviz
install/robot_ras_ros/share/robot_ras_ros/urdf/: chassis.xacro  gazebo_elementos.xacro  lidar.xacro  materiais.xacro  propriedades.xacro  robot.urdf.xacro  roda.xacro  roda_boba.xacro
install/robot_ras_ros/share/robot_ras_ros/worlds/: hacka_labirinth.world  labirinth.world
log/: latest_build
robot_ras_decision/: CMakeLists.txt  package.xml
robot_ras_decision/msg/: Movement.msg
robot_ras_decision/src/moviment/: manager.cpp  moviment_control.cpp
robot_ras_decision/srv/: SetVelocity.srv
src/robot_ras_decision/: CMakeLists.txt  package.xml
src/robot_ras_decision/src/: manager.cpp  moviment_control.cpp
