<?xml version="1.0"?>
<package format="3">
  <name>robot_ras_decision</name>
  <version>0.0.1</version>
  <description>Pacote de controle e decisão do robô com ROS 2</description>
  <maintainer email="seu.email@exemplo.com">Seu Nome</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
